# shotote

./: README.md  gui.py  pyproject.toml  str.py  strea.py
src/str/: __init__.py
